# JNIlib

./: CMakeLists.txt
lib/: CMakeLists.txt  hello.cpp
lib/include/: DSHOT.pio  com_github_lazygamer1111_components_output_ESC.h  test.pio.h
